<?xml version="1.0"?>
<package format="2">
  <name>smr1_moveit_config</name>
  <version>0.0.0</version>
  <description>The smr1_moveit_config package</description>

  <maintainer email="ros-industrial@todo.todo">ros-industrial</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>
</package>
